--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@heroicons/react": "^1.0.6",
     "babel-plugin-macros": "^3.1.0",
     "bcryptjs": "^2.4.3",
+    "geolib": "^3.3.3",
     "js-cookie": "^3.0.1",
+    "mapbox-gl": "^2.9.1",
     "mongoose": "^6.3.5",
     "next": "12.1.6",
-    "next-auth": "^4.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.3",
+    "react-map-gl": "^7.0.16",
     "react-toastify": "^9.0.4"
   },
   "devDependencies": {
